alterações e melhorias part2

--- a/projeto-final/biblioteca-digital-frontend/index.html
+++ b/projeto-final/biblioteca-digital-frontend/index.html
@@ -2,10 +2,14 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <!-- Título da página que aparece na aba do navegador -->
     <title>Biblioteca Digital</title>
   </head>
   <body>
+    <!-- Div raiz onde a aplicação React será renderizada -->
     <div id="root"></div>
+    <!-- Importa o arquivo principal do React (main.jsx)
+         usando módulos ES -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
